syntax = "proto3";

option java_package = "com.evergreen.EvergreenOrchestratorServer.grpc";
option java_multiple_files = true;

service OrderService {
    rpc ValidateStock(ValidateStockRequest) returns (ValidateStockResponse);
}

message ValidateStockRequest {
    int64 productId = 1;
}

message ValidateStockResponse {
    bool available = 1;
}
